--- a/README
+++ b/README
@@ -53,12 +53,15 @@ To add debugging, add 'g -O0' $AM_CFLAGS in bgpd/Makefile.am
     sudo chown root /etc/init.d/quagga
     sudo chmod u+rwx /etc/init.d/quagga
 
+10)Enable IP forwarding: 
+   sysctl -w net.ipv4.ip_forward=1
+
 
 ---- The following allows you test if a base version of quagga works
 
-10)Copy config/samples/{*.conf, daemons} to /etc/quagga and make sure all files are owned by quagga:quaggavty
+11)Copy config/samples/{*.conf, daemons} to /etc/quagga and make sure all files are owned by quagga:quaggavty
 
-11)To see if things work: 
+12)To see if things work: 
     bpgd &
     telnet localhost bgpd
     vtysh
