--- a/README
+++ b/README
@@ -9,11 +9,10 @@ received, the code checks to see if this sentinel value is set. NOTE:
 The sentinel value is not set or checked on the route server code
 path.
 
-davids/quagga_configuration): adds a protobuf configuration format
-that bgpd can read. Contains configuration information for the router
-and the specific protocols. See 'bgpd/quaga_config.proto' for details.
+Merged to Master: davids/quagga_configuration): adds a protobuf configuration
+format that bgpd can read. Contains configuration information for the router and
+the specific protocols. See 'bgpd/quaga_config.proto' for details.
 
-<<<<<<< variant A
 Making:
 If it complains about missing aclocale or something, run 'autoreconf'.
 
@@ -29,65 +28,6 @@ Branch dependencies:
        2. google protobuf greater than 2.6.0. libprotobuf.so and
        libprotobuf-lite.so expected in /usr/lib
 
-configuration format:
-A 'WiserProtocolConfig' only has a 'Topology' message associated with it.
-
-A 'Topology' has a list of node_links. Basically an adjacency list.
-
-A 'NodeLink' has a 'NodeProperty' for the primary node and a list of 'Links'
-
-A 'NodeProperty' has the name of the node and the interface associated with it.
-
-A 'Link' has a 'NodeProperty' of the adjacent node and a symetric cost
-associated with that link.
-
-This is defined as a Text formatted proto. Example:
-topology {
-  node_links {
-    primary_node {
-      node_name: "a1"
-      interface_ip: "172.0.1.1"
-    }
-    links {
-      adjacent_node {
-        node_name: "b1"
-        interface_ip: "172.0.2.1"
-      }
-      link_cost: 10
-    }
-  }
-  node_links {
-    primary_node {
-      node_name: "b1"
-      interface_ip: "172.0.2.1"
-    }
-    links {
-      adjacent_node {
-        node_name: "a1"
-        interface_ip: "172.0.1.1"
-      }
-      link_cost: 10
-    }
-  }
-}
-
-Use:
-
-It expects a file called 'protobuf_config' in the configuration directory ( it
-will look in the same one that bgpd.conf is located in). This file contains a
-text formatted protobuf.
-
-Currently only WiserProtocolConfiguration protobuf message is parsed, so do not
-make a textformat of the message that contains the WiserProtocolConfiguration.
-See wiser_config_test.cc for an example of the format of the protobuf.
-
-On startup of bgpd_main, wiser_config_ will be created (it will be null on
-failure). To use this, create an extern to this variable in the file it will be
-used in and interact with it with the functions in 'wiser_config_interface.h'.
-See http://stackoverflow.com/questions/11971063/how-to-use-c-objects-in-c for an
-example of the abstraction being used.
->>>>>>> variant B
-======= end
 
 Dependencies
 ------------
@@ -185,12 +125,55 @@ It expects a file called 'protobuf_config' in the configuration directory ( it
 will look in the same one that bgpd.conf is located in). This file contains a
 text formatted protobuf.
 
-Currently only WiserProtocolConfiguration protobuf message is parsed, so do not
-make a textformat of the message that contains the WiserProtocolConfiguration.
-See wiser_config_test.cc for an example of the format of the protobuf.
-
-On startup of bgpd_main, wiser_config_ will be created (it will be null on
-failure). To use this, create an extern to this variable in the file it will be
-used in and interact with it with the functions in 'wiser_config_interface.h'.
-See http://stackoverflow.com/questions/11971063/how-to-use-c-objects-in-c for an
+On startup of bgpd_main, general_config_, wiser_config_ will be created (it will
+be null on failure). To use this, create an extern to this variable in the file
+it will be used in and interact with it with the functions in
+'wiser_config_interface.h'. See
+http://stackoverflow.com/questions/11971063/how-to-use-c-objects-in-c for an
 example of the abstraction being used.
+
+configuration format:
+
+A 'Configuration' message contains the different configurations for protocols
+and global information (such as the running protocol of a router)
+
+A 'WiserProtocolConfig' only has a 'Topology' message associated with it.
+
+A 'Topology' has a list of node_links. Basically an adjacency list.
+
+A 'NodeLink' has a 'NodeProperty' for the primary node and a list of 'Links'
+
+A 'NodeProperty' has the name of the node and the interface associated with it.
+
+A 'Link' has a 'NodeProperty' of the adjacent node and a symetric cost
+associated with that link.
+
+This is defined as a Text formatted proto. Example:
+topology {
+  node_links {
+    primary_node {
+      node_name: "a1"
+      interface_ip: "172.0.1.1"
+    }
+    links {
+      adjacent_node {
+        node_name: "b1"
+        interface_ip: "172.0.2.1"
+      }
+      link_cost: 10
+    }
+  }
+  node_links {
+    primary_node {
+      node_name: "b1"
+      interface_ip: "172.0.2.1"
+    }
+    links {
+      adjacent_node {
+        node_name: "a1"
+        interface_ip: "172.0.1.1"
+      }
+      link_cost: 10
+    }
+  }
+}
